Controller 수정 error Handlering 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/pinokio/serverTimeZone=UTC&CharacterEncoding=UTF-8
-#spring.datasource.username=pinokio
-#spring.datasource.password=rhqckd
-
 #server.address=localhost
 #server.port=8080
 
@@ -18,3 +13,6 @@ spring.datasource.password=rhqckd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+server.error.include-message = always
+server.error.include-exception=true
