user 관련 crud 추가 및 라인정리

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE')
+    implementation('org.springframework.security:spring-security-jwt:1.0.9.RELEASE')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
